--- a/inferless.yaml
+++ b/inferless.yaml
@@ -29,8 +29,8 @@ configuration:
 env:
   # Add your environment variables here
   # ENV: 'PROD'
-  HF_TOKEN: '<YOUR_HUGGINGFACE_ACCESS_TOKEN>'
-  VOLUME_NFS: '<YOUR_NFS_VOLUME>'
+  HF_TOKEN: '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'
+  VOLUME_NFS: '/var/nfs-mount/model-files'
 secrets:
   # Add your secret ids here you can find it by running `inferless secrets list`
   # - 65723205-ce21-4392-a10b-3tf00c58988c
