--- a/inferless.yaml
+++ b/inferless.yaml
@@ -39,6 +39,6 @@ optional:
   input_file_name: input.json
   output_file_name: output.json
   runtime_file_name: inferless-runtime-config.yaml
-model_url: https://github.com/inferless/Llama-3.1-8B-Instruct.git
+model_url: https://github.com/rbgo404/Llama-3.1-8B-Instruct.git
 provider: GITHUB
 io_schema: true
